--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
         <link href="./assets/css/reset.css" rel="stylesheet" />
     </head>
     <body>
-        
+        <main role="main">
+
+            <header >
+                <img src="assets/img/logo.jpg" alt="Fruta & fruto">
+                <nav>
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Receitas</a></li>
+                        <li><a href="#">Quem somos</a></li>
+                        <li><a href="#">Comunidade</a></li>
+                    </ul>
+                </nav>
+
+            </header>
+
+        </main>
+
     </body>
 </html>
