--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <body>
         <main role="main">
 
-            <header >
-                <img src="assets/img/logo.jpg" alt="Fruta & fruto">
-                <nav>
-                    <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Receitas</a></li>
-                        <li><a href="#">Quem somos</a></li>
-                        <li><a href="#">Comunidade</a></li>
+            <header class="cabecario">
+                <img class="cabecario__imagem" src="assets/img/logo.jpg" alt="Fruta & fruto">
+                <nav class="menu">
+                    <ul class="menu-lista">
+                        <li class="menu-item"><a class="menu-link ativo" href="#">Inicio</a></li>
+                        <li class="menu-item"><a class="menu-link" href="#">Receitas</a></li>
+                        <li class="menu-item"><a class="menu-link" href="#">Quem somos</a></li>
+                        <li class="menu-item"><a class="menu-link" href="#">Comunidade</a></li>
                     </ul>
                 </nav>
 
