--- a/index.html
+++ b/index.html
@@ -17,14 +17,23 @@
                 <img class="cabecario__imagem" src="assets/img/logo.jpg" alt="Fruta & fruto">
                 <nav class="menu">
                     <ul class="menu-lista">
-                        <li class="menu-item"><a class="menu-link ativo" href="#">Inicio</a></li>
+                        <li class="menu-item"><a class="menu-link ativo" href="#">Início</a></li>
                         <li class="menu-item"><a class="menu-link" href="#">Receitas</a></li>
                         <li class="menu-item"><a class="menu-link" href="#">Quem somos</a></li>
                         <li class="menu-item"><a class="menu-link" href="#">Comunidade</a></li>
                     </ul>
                 </nav>
-
             </header>
+
+            <section class="banner">
+                <img class="banner__imagem" src="assets/img/banner.jpg" alt="Banner pricipal da loja">
+                <h2 class="benner__titulo">Reaproveite melhor os alimentos!</h2>
+            </section>
+            <section class="sobre">
+                <h2 class="sobre__titolo">Receitas para aconomisar e ganhar saúde</h2>
+                <p class="sobre__texto">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+
+            </section>
 
         </main>
 
