aula 06 melhorias no banner

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
             <section class="banner">
                 <img class="banner__imagem" src="assets/img/banner.jpg" alt="Banner pricipal da loja">
-                <h2 class="benner__titulo">Reaproveite melhor os alimentos!</h2>
+                <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
             </section>
             <section class="sobre">
-                <h2 class="sobre__titolo">Receitas para aconomisar e ganhar saúde</h2>
+                <h2 class="sobre__titolo">Receitas para aconomizar e ganhar saúde</h2>
                 <p class="sobre__texto">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
 
             </section>
