aula 9/10 estilizando o card dos post

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pt-BR">
     <head>
         <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:100,300,400,500,700,900" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+        
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -36,6 +39,63 @@
 
             </section>
 
+    <section class="receitas">
+
+
+            <section class="receita">
+                <img class="receita__imagem" src="assets/img/receitas/tigela-de-abacate.jpg" alt>
+                <div class="receita__conteudo">
+                     <h2 class="receita__titulo">Tigela de abacate</h2>
+                     <p class="receita__texto">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                     <button class="receita__botao" href="#">Ver receita</button>
+                </div>
+            </section>
+
+            <section class="receita">
+                <img class="receita__imagem" src="assets/img/receitas/salada-de-kiwi.jpg" alt>
+                <div class="receita__conteudo">
+                     <h2 class="receita__titulo">Salada de kiwi</h2>
+                     <p class="receita__texto">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                     <button class="receita__botao" href="#">Ver receita</button>
+                </div>
+            </section>
+
+            <section class="receita">
+                <img class="receita__imagem" src="assets/img/receitas/mix-de-vegetais.jpg " alt>
+                <div class="receita__conteudo">
+                     <h2 class="receita__titulo">Mix de vegetais</h2>
+                     <p class="receita__texto">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                     <button class="receita__botao" href="#">Ver receita</button>
+                </div>
+            </section>
+
+            <section class="receita">
+                <img class="receita__imagem" src="assets/img/receitas/pimentoes-a-juliana.jpg" alt>
+                <div class="receita__conteudo">
+                     <h2 class="receita__titulo">Pimentões à Juliana</h2>
+                     <p class="receita__texto">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                     <button class="receita__botao" href="#">Ver receita</button>
+                </div>
+            </section>
+
+            <section class="receita">
+                <img class="receita__imagem" src="assets/img/receitas/prato-oriental.jpg" alt>
+                <div class="receita__conteudo">
+                     <h2 class="receita__titulo">Prato oriental</h2>
+                     <p class="receita__texto">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                     <button class="receita__botao" href="#">Ver receita</button>
+                </div>
+            </section>
+
+            <section class="receita">
+                <img class="receita__imagem" src="assets/img/receitas/beterrabas-assadas.jpg" alt>
+                <div class="receita__conteudo">
+                     <h2 class="receita__titulo">Beterrabas assadas</h2>
+                     <p class="receita__texto">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                     <button class="receita__botao" href="#">Ver receita</button>
+                </div>
+            </section>
+    </section>  
         </main>
 
     </body>
