aula 13/14/15 criação do footer e melhoris no banner

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </header>
 
             <section class="banner">
-                <img class="banner__imagem" src="assets/img/banner.jpg" alt="Banner pricipal da loja">
+                <div class="banner__imagem" ></div>
                 <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
             </section>
 
@@ -118,6 +118,12 @@
             </div>
         </div>
     </section>
+
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Contato: contato@gmail.com</h2>
+        <div class="rodape__quadrado"></div>
+        <div class="rodape__quadrado"></div>
+    </footer>
 
         </main>
 
